--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     tools:context=".MainActivity">
 
 
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="add" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listToShow"
         android:layout_width="match_parent"
